[gd_scene load_steps=34 format=3 uid="uid://ccj8v6svcl6d8"]

[ext_resource type="Texture2D" uid="uid://b1cbrecnw73qr" path="res://assets/characters/zombie/character_zombie_duck.png" id="1_6vmj5"]
[ext_resource type="Script" path="res://scripts/enemy.gd" id="1_wpo1c"]
[ext_resource type="Texture2D" uid="uid://cghv6uad84jpq" path="res://assets/characters/zombie/character_zombie_drag.png" id="2_5v82g"]
[ext_resource type="Texture2D" uid="uid://bp3monvpkcibu" path="res://assets/characters/zombie/character_zombie_attack0.png" id="3_fdsmu"]
[ext_resource type="Texture2D" uid="uid://bnagf83kbphnj" path="res://assets/characters/zombie/character_zombie_attack1.png" id="4_x67kk"]
[ext_resource type="Texture2D" uid="uid://dkv3gqe3ufulp" path="res://assets/characters/zombie/character_zombie_attack2.png" id="5_tfeqh"]
[ext_resource type="Texture2D" uid="uid://bbejubcc1jq7l" path="res://assets/characters/zombie/character_zombie_jump.png" id="6_ejf87"]
[ext_resource type="Texture2D" uid="uid://b80aya7gx2bt" path="res://assets/characters/zombie/character_zombie_run0.png" id="7_t4w0u"]
[ext_resource type="Texture2D" uid="uid://b46wcstw07gyf" path="res://assets/characters/zombie/character_zombie_run1.png" id="8_lahvp"]
[ext_resource type="Texture2D" uid="uid://drt7f454uyvfn" path="res://assets/characters/zombie/character_zombie_run2.png" id="9_phqfu"]
[ext_resource type="Texture2D" uid="uid://d05fe022j1v3i" path="res://assets/characters/zombie/character_zombie_walk0.png" id="10_6iwty"]
[ext_resource type="Texture2D" uid="uid://c7qmgcsle1erx" path="res://assets/characters/zombie/estado1-zombie.png" id="11_oy7df"]
[ext_resource type="Texture2D" uid="uid://bbc0snv28xchn" path="res://assets/characters/zombie/character_zombie_walk1.png" id="11_wwlji"]
[ext_resource type="Texture2D" uid="uid://dr2x5epia7egg" path="res://assets/characters/zombie/estado2-zombie.png" id="12_6qmca"]
[ext_resource type="Texture2D" uid="uid://tvenxxymw6oj" path="res://assets/characters/zombie/character_zombie_walk2.png" id="12_ffaqg"]
[ext_resource type="Texture2D" uid="uid://cjyhm8xq7lk6o" path="res://assets/characters/zombie/estado3-zombie.png" id="13_2mynq"]
[ext_resource type="Texture2D" uid="uid://be47qjcnkys58" path="res://assets/characters/zombie/character_zombie_walk3.png" id="13_18w53"]
[ext_resource type="Texture2D" uid="uid://brokrpb25er7j" path="res://assets/characters/zombie/estado4.png" id="14_ojajo"]
[ext_resource type="Texture2D" uid="uid://brgymd80bqhq1" path="res://assets/characters/zombie/character_zombie_walk4.png" id="14_pxy3p"]
[ext_resource type="Texture2D" uid="uid://b8gprin76tnc" path="res://assets/characters/zombie/character_zombie_walk5.png" id="15_eqnlp"]
[ext_resource type="Texture2D" uid="uid://dx0snylxn26dp" path="res://assets/characters/zombie/character_zombie_walk6.png" id="16_1xjk3"]
[ext_resource type="Texture2D" uid="uid://86181pds1j5j" path="res://assets/characters/rotacionbola/bola_rotacion_0.png" id="16_4oy4q"]
[ext_resource type="Texture2D" uid="uid://duayoimoig5tw" path="res://assets/characters/zombie/character_zombie_walk7.png" id="17_8afgr"]
[ext_resource type="Texture2D" uid="uid://csy43fvni2e37" path="res://assets/characters/rotacionbola/bola_rotacion_1.png" id="17_w54pa"]
[ext_resource type="Texture2D" uid="uid://bl0msrp1e8nd3" path="res://assets/characters/rotacionbola/bola_rotacion_2.png" id="18_2seda"]
[ext_resource type="Texture2D" uid="uid://dmajuireqanro" path="res://assets/characters/rotacionbola/bola_rotacion_3.png" id="19_nshgt"]
[ext_resource type="Texture2D" uid="uid://bc5cpxuwmyifi" path="res://assets/characters/rotacionbola/bola_rotacion_4.png" id="20_64hjn"]
[ext_resource type="Texture2D" uid="uid://vqmsiou14yxc" path="res://assets/characters/rotacionbola/bola_rotacion_5.png" id="21_dnkag"]
[ext_resource type="Texture2D" uid="uid://bcl8ce7kfkeib" path="res://assets/characters/zombie/character_zombie_fallDown.png" id="22_ltt4t"]
[ext_resource type="AudioStream" uid="uid://c8unvgkodolkp" path="res://sounds/SFX/punch-2-166695.mp3" id="30_co03i"]

[sub_resource type="SpriteFrames" id="SpriteFrames_s0uqf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_6vmj5")
}, {
"duration": 1.0,
"texture": ExtResource("2_5v82g")
}, {
"duration": 1.0,
"texture": ExtResource("3_fdsmu")
}, {
"duration": 1.0,
"texture": ExtResource("4_x67kk")
}, {
"duration": 1.0,
"texture": ExtResource("5_tfeqh")
}],
"loop": false,
"name": &"attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_6iwty")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_ejf87")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_t4w0u")
}, {
"duration": 1.0,
"texture": ExtResource("8_lahvp")
}, {
"duration": 1.0,
"texture": ExtResource("9_phqfu")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_oy7df")
}],
"loop": true,
"name": &"state1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("12_6qmca")
}],
"loop": true,
"name": &"state2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("13_2mynq")
}],
"loop": true,
"name": &"state3",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("14_ojajo")
}],
"loop": true,
"name": &"state4",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("16_4oy4q")
}, {
"duration": 1.0,
"texture": ExtResource("17_w54pa")
}, {
"duration": 1.0,
"texture": ExtResource("18_2seda")
}, {
"duration": 1.0,
"texture": ExtResource("19_nshgt")
}, {
"duration": 1.0,
"texture": ExtResource("20_64hjn")
}, {
"duration": 1.0,
"texture": ExtResource("21_dnkag")
}],
"loop": true,
"name": &"state5",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("22_ltt4t")
}],
"loop": true,
"name": &"state6",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_6iwty")
}, {
"duration": 1.0,
"texture": ExtResource("11_wwlji")
}, {
"duration": 1.0,
"texture": ExtResource("12_ffaqg")
}, {
"duration": 1.0,
"texture": ExtResource("13_18w53")
}, {
"duration": 1.0,
"texture": ExtResource("14_pxy3p")
}, {
"duration": 1.0,
"texture": ExtResource("15_eqnlp")
}, {
"duration": 1.0,
"texture": ExtResource("16_1xjk3")
}, {
"duration": 1.0,
"texture": ExtResource("17_8afgr")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ymj4w"]
size = Vector2(49, 86)

[sub_resource type="CircleShape2D" id="CircleShape2D_ctcbv"]
radius = 33.0606

[node name="zombie" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 2
collision_mask = 2
script = ExtResource("1_wpo1c")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_s0uqf")
animation = &"attack"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 19)
shape = SubResource("RectangleShape2D_ymj4w")

[node name="right_sensor" type="RayCast2D" parent="."]
target_position = Vector2(300, 0)
hit_from_inside = true

[node name="left_sensor" type="RayCast2D" parent="."]
target_position = Vector2(-300, 0)
hit_from_inside = true

[node name="floor_r_sensor" type="RayCast2D" parent="."]
position = Vector2(38, 53)
target_position = Vector2(0, 27.3)
hit_from_inside = true
collide_with_areas = true

[node name="floor_l_sensor" type="RayCast2D" parent="."]
position = Vector2(-38, 53)
target_position = Vector2(0, 27.3)
hit_from_inside = true

[node name="left_prox_sensor" type="RayCast2D" parent="."]
target_position = Vector2(-33, 0)
collision_mask = 2
hit_from_inside = true

[node name="right_prox_sensor" type="RayCast2D" parent="."]
target_position = Vector2(33, 0)
collision_mask = 2
hit_from_inside = true

[node name="shoot_position" type="Marker2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="shoot_position"]
position = Vector2(45, 10)

[node name="Timer" type="Timer" parent="."]

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 27)
shape = SubResource("CircleShape2D_ctcbv")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(1, -32)

[node name="punch" type="AudioStreamPlayer" parent="."]
stream = ExtResource("30_co03i")

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
